Fix modal alignment in smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ h3 {
 
 #form input {
     display: flex;
-    margin: 1em 29em;
+    margin: 1em 29.5em;
 }
 
 input {
@@ -45,6 +45,7 @@ input {
     font-size: 1.5em;
     color: #000;
     padding: 10px 12px;
+    width: auto;
 }
 
 #play-btn:hover, #feedback-btn:hover {
@@ -53,7 +54,7 @@ input {
 }
 
 #form #play-btn {
-    margin: 2em 12.3em;
+    margin: 2em 12.5em;
 
 }
 
@@ -167,8 +168,16 @@ input {
 @media screen and (max-width: 1600px) {
     #form {
         position: absolute;
-        margin: 0 15em;
+        margin: 0 10em;
         padding: 6em 9em;
+    }
+
+    #form input {
+        margin: 1em 23em;
+    }
+
+    #form #play-btn {
+        margin: 2em 9.7em;
     }
 
     .game-area {
@@ -193,16 +202,18 @@ input {
 @media screen and (max-width: 1280px) {
     #form {
         padding: 3em 9em;
+        margin: 0 8em;
     }
 
 
     #form input {
-        margin: 0 0 2em 0;
+        margin: 1em 0 3em 14em;
         width: 250px;
     }
 
     #form #play-btn {
-        margin-top: 1em;
+        margin: 1em 7.2em;
+        width: auto;
     }
 
     .game-area {
@@ -227,13 +238,31 @@ input {
     }
 
     #form {
-        margin: 0 5em;
+        margin: 0 2em;
         padding: 3em 9em;
+    }
+
+    #form input {
+        margin: 1em 0 3em 5em;
+    }
+
+    #form #play-btn {
+        margin: 1em 4.2em;
+        width: auto;
     }
 
     .game-area {
         height: 385px;
         margin: 1em 9em;
+    }
+
+    #submit-btn, #nxt-btn {
+        left: 1em;
+    }
+
+    .modal-container {
+        top: 18.5em;
+        left: 13.5em;
     }
 
     .score-area {
@@ -252,8 +281,16 @@ input {
 /* responsive design for screens 400px and below */
 @media screen and (max-width:400px) {
     #form {
-        margin: unset;
-        padding: 3em;
+        margin: 0 3.5em;
+        padding: 2em;
+    }
+
+    #form input {
+        margin: 1em 0 3em -2.5em;
+    }
+
+    #form #play-btn {
+        margin: 1em 0.5em;
     }
 
     .game-area {
@@ -261,13 +298,11 @@ input {
         margin: 1em 0;
         width: 100%;
     }
-
     
-
     .modal-container {
         position: fixed;
         top: 20em;
-        left: 2em;
+        left: .5em;
         width: unset;
     }
 
